# ChatGPT_Clone

./: .env  alembic.ini  pyproject.toml  reqquirements.txt
alembic/: env.py
alembic/versions/: ab6af3d2727f_add_embedding_column_to_chats.py  f470b0630b2f_initial_migration.py
app/: database.py  main.py  models.py  schemas.py
app/Chat/: embeddings.py  routes.py  tools.py
app/Sreamlit_app/: run.py
app/authenticate/: hashing.py  jwt.py  routes.py
